--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
           <h2 hidden>description</h2>
           <ul class="description-list">
             <li class="description-item">
+              <div class="icon">
+                <svg class="icon-list">
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="description-subtitle">Strategy</h3>
               <p class="description-text">
                 Our goal is to identify the business problem to walk away with
@@ -79,6 +84,11 @@
               </p>
             </li>
             <li class="description-item">
+              <div class="icon">
+                <svg class="icon-list">
+                  <use href="./images/icons.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="description-subtitle">Punctuality</h3>
               <p class="description-text">
                 Bring the key message to the brand's audience for the best price
@@ -86,6 +96,11 @@
               </p>
             </li>
             <li class="description-item">
+              <div class="icon">
+                <svg class="icon-list">
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="description-subtitle">Diligence</h3>
               <p class="description-text">
                 Research and confirm brands that present the strongest digital
@@ -93,6 +108,11 @@
               </p>
             </li>
             <li class="description-item">
+              <div class="icon">
+                <svg class="icon-list">
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="description-subtitle">Technologies</h3>
               <p class="description-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -127,7 +147,39 @@
               />
               <h3 class="about-subtitle">Mark Guerrero</h3>
               <p class="about-text">Product Designer</p>
+
+              <ul class="socials-list">
+                <li class="socials-item">
+                  <a href="socials-link">
+                    <svg class="socials-icon">
+                      <use href="./images/icons.svg#icon-instagram-2"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="socials-item">
+                  <a href="socials-link">
+                    <svg class="socials-icon">
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="socials-item">
+                  <a href="socials-link">
+                    <svg class="socials-icon">
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="socials-item">
+                  <a href="socials-link">
+                    <svg class="socials-icon">
+                      <use href="./images/icons.svg#icon-linkedin-1"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
+
             <li class="secjob-item">
               <img
                 class="secjob-img"
@@ -137,6 +189,36 @@
               />
               <h3 class="about-subtitle">Tom Ford</h3>
               <p class="about-text">Frontend Developer</p>
+              <ul class="socials-list">
+                <li class="socials-item">
+                  <a href="socials-link">
+                    <svg class="socials-icon">
+                      <use href="./images/icons.svg#icon-instagram-2"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="socials-item">
+                  <a href="socials-link">
+                    <svg class="socials-icon">
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="socials-item">
+                  <a href="socials-link">
+                    <svg class="socials-icon">
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="socials-item">
+                  <a href="socials-link">
+                    <svg class="socials-icon">
+                      <use href="./images/icons.svg#icon-linkedin-1"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="secjob-item">
               <img
@@ -147,6 +229,36 @@
               />
               <h3 class="about-subtitle">Camila Garcia</h3>
               <p class="about-text">Marketing</p>
+              <ul class="socials-list">
+                <li class="socials-item">
+                  <a href="socials-link">
+                    <svg class="socials-icon">
+                      <use href="./images/icons.svg#icon-instagram-2"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="socials-item">
+                  <a href="socials-link">
+                    <svg class="socials-icon">
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="socials-item">
+                  <a href="socials-link">
+                    <svg class="socials-icon">
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="socials-item">
+                  <a href="socials-link">
+                    <svg class="socials-icon">
+                      <use href="./images/icons.svg#icon-linkedin-1"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="secjob-item">
               <img
@@ -157,6 +269,86 @@
               />
               <h3 class="about-subtitle">Daniel Wilson</h3>
               <p class="about-text">UI Designer</p>
+              <ul class="socials-list">
+                <li class="socials-item">
+                  <a href="socials-link">
+                    <svg class="socials-icon">
+                      <use href="./images/icons.svg#icon-instagram-2"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="socials-item">
+                  <a href="socials-link">
+                    <svg class="socials-icon">
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="socials-item">
+                  <a href="socials-link">
+                    <svg class="socials-icon">
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="socials-item">
+                  <a href="socials-link">
+                    <svg class="socials-icon">
+                      <use href="./images/icons.svg#icon-linkedin-1"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="sections-customers">
+        <div class="container sections-customers">
+          <h2 class="customers-title">Customers</h2>
+          <ul class="customers-list">
+            <li class="customer">
+              <a class="adress-customers" href="#">
+                <svg class="icons-customers">
+                  <use href="./images/icons.svg#icon-Logo"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer">
+              <a class="adress-customers" href="#">
+                <svg class="icons-customers">
+                  <use href="./images/icons.svg#icon-Logo-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer">
+              <a class="adress-customers" href="#">
+                <svg class="icons-customers">
+                  <use href="./images/icons.svg#icon-Logo-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer">
+              <a class="adress-customers" href="#">
+                <svg class="icons-customers">
+                  <use href="./images/icons.svg#icon-Logo-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer">
+              <a class="adress-customers" href="#">
+                <svg class="icons-customers">
+                  <use href="./images/icons.svg#icon-Logo-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer">
+              <a class="adress-customers" href="#">
+                <svg class="icons-customers">
+                  <use href="./images/icons.svg#icon-Logo-51"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -169,6 +361,7 @@
           <a href="./index.html" class="logo-footer"
             >Web<span class="logo-secfooter">Studio</span></a
           >
+
           <p class="description-footer">
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
