--- a/portfolio.html
+++ b/portfolio.html
@@ -161,17 +161,51 @@
         </div>
       </section>
     </main>
-    <footer class="footer-section">
+     <footer class="footer-section">
       <div class="container">
         <div class="footer-title">
           <a href="./index.html" class="logo-footer"
             >Web<span class="logo-secfooter">Studio</span></a
           >
+
           <p class="description-footer">
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
           </p>
         </div>
+        <div>
+          <h2 class="socials-tittle">Social media</h2>
+        <ul class="socials-list1">
+          <li class="socials-item1">
+            <a href="socials-link1">
+              <svg class="socials-icon1">
+                <use href="./images/icons.svg#icon-instagram-2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="socials-item1">
+            <a href="socials-link1">
+              <svg class="socials-icon1">
+                <use href="./images/icons.svg#icon-twitter-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="socials-item1">
+            <a href="socials-link1">
+              <svg class="socials-icon1">
+                <use href="./images/icons.svg#icon-facebook-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="socials-item1">
+            <a href="socials-link1">
+              <svg class="socials-icon1">
+                <use href="./images/icons.svg#icon-linkedin-1"></use>
+              </svg>
+            </a>
+            </div>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
