--- a/index.html
+++ b/index.html
@@ -367,39 +367,39 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div>
+        <div class="footer-container">
           <h2 class="socials-tittle">Social media</h2>
-        <ul class="socials-list1">
-          <li class="socials-item1">
-            <a href="socials-link1">
-              <svg class="socials-icon1">
-                <use href="./images/icons.svg#icon-instagram-2"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="socials-item1">
-            <a href="socials-link1">
-              <svg class="socials-icon1">
-                <use href="./images/icons.svg#icon-twitter-1"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="socials-item1">
-            <a href="socials-link1">
-              <svg class="socials-icon1">
-                <use href="./images/icons.svg#icon-facebook-1"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="socials-item1">
-            <a href="socials-link1">
-              <svg class="socials-icon1">
-                <use href="./images/icons.svg#icon-linkedin-1"></use>
-              </svg>
-            </a>
-            </div>
-          </li>
-        </ul>
+          <ul class="socials-list1">
+            <li class="socials-item1">
+              <a href="socials-link1">
+                <svg class="socials-icon1">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-item1">
+              <a href="socials-link1">
+                <svg class="socials-icon1">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-item1">
+              <a href="socials-link1">
+                <svg class="socials-icon1">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-item1">
+              <a href="socials-link1">
+                <svg class="socials-icon1">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
