--- a/index.html
+++ b/index.html
@@ -150,28 +150,29 @@
 
               <ul class="socials-list">
                 <li class="socials-item">
-                  <a href="socials-link">
+                  <a class="socials-link" href
+                    >>
                     <svg class="socials-icon">
                       <use href="./images/icons.svg#icon-instagram-2"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socials-item">
-                  <a href="socials-link">
+                  <a class="socials-link" href>
                     <svg class="socials-icon">
                       <use href="./images/icons.svg#icon-twitter-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socials-item">
-                  <a href="socials-link">
+                  <a class="socials-link" href>
                     <svg class="socials-icon">
                       <use href="./images/icons.svg#icon-facebook-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socials-item">
-                  <a href="socials-link">
+                  <a class="socials-link" href>
                     <svg class="socials-icon">
                       <use href="./images/icons.svg#icon-linkedin-1"></use>
                     </svg>
@@ -191,28 +192,28 @@
               <p class="about-text">Frontend Developer</p>
               <ul class="socials-list">
                 <li class="socials-item">
-                  <a href="socials-link">
+                  <a class="socials-link" href>
                     <svg class="socials-icon">
                       <use href="./images/icons.svg#icon-instagram-2"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socials-item">
-                  <a href="socials-link">
+                  <a class="socials-link" href>
                     <svg class="socials-icon">
                       <use href="./images/icons.svg#icon-twitter-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socials-item">
-                  <a href="socials-link">
+                  <a class="socials-link" href>
                     <svg class="socials-icon">
                       <use href="./images/icons.svg#icon-facebook-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socials-item">
-                  <a href="socials-link">
+                  <a class="socials-link" href>
                     <svg class="socials-icon">
                       <use href="./images/icons.svg#icon-linkedin-1"></use>
                     </svg>
@@ -231,28 +232,28 @@
               <p class="about-text">Marketing</p>
               <ul class="socials-list">
                 <li class="socials-item">
-                  <a href="socials-link">
+                  <a class="socials-link" href>
                     <svg class="socials-icon">
                       <use href="./images/icons.svg#icon-instagram-2"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socials-item">
-                  <a href="socials-link">
+                  <a class="socials-link" href>
                     <svg class="socials-icon">
                       <use href="./images/icons.svg#icon-twitter-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socials-item">
-                  <a href="socials-link">
+                  <a class="socials-link" href>
                     <svg class="socials-icon">
                       <use href="./images/icons.svg#icon-facebook-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socials-item">
-                  <a href="socials-link">
+                  <a class="socials-link" href>
                     <svg class="socials-icon">
                       <use href="./images/icons.svg#icon-linkedin-1"></use>
                     </svg>
@@ -271,28 +272,28 @@
               <p class="about-text">UI Designer</p>
               <ul class="socials-list">
                 <li class="socials-item">
-                  <a href="socials-link">
+                  <a class="socials-link" href>
                     <svg class="socials-icon">
                       <use href="./images/icons.svg#icon-instagram-2"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socials-item">
-                  <a href="socials-link">
+                  <a class="socials-link" href>
                     <svg class="socials-icon">
                       <use href="./images/icons.svg#icon-twitter-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socials-item">
-                  <a href="socials-link">
+                  <a class="socials-link" href>
                     <svg class="socials-icon">
                       <use href="./images/icons.svg#icon-facebook-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socials-item">
-                  <a href="socials-link">
+                  <a class="socials-link" href>
                     <svg class="socials-icon">
                       <use href="./images/icons.svg#icon-linkedin-1"></use>
                     </svg>
@@ -356,7 +357,7 @@
     </main>
 
     <footer class="footer-section">
-      <div class="container">
+      <div class="container-footer">
         <div class="footer-title">
           <a href="./index.html" class="logo-footer"
             >Web<span class="logo-secfooter">Studio</span></a
@@ -371,28 +372,28 @@
           <h2 class="socials-tittle">Social media</h2>
           <ul class="socials-list1">
             <li class="socials-item1">
-              <a href="socials-link1">
+              <a class="socials-link1" href>
                 <svg class="socials-icon1">
                   <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
             <li class="socials-item1">
-              <a href="socials-link1">
+              <a class="socials-link1" href>
                 <svg class="socials-icon1">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="socials-item1">
-              <a href="socials-link1">
+              <a class="socials-link1" href>
                 <svg class="socials-icon1">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="socials-item1">
-              <a href="socials-link1">
+              <a class="socials-link1" href>
                 <svg class="socials-icon1">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
