--- a/index.html
+++ b/index.html
@@ -357,6 +357,7 @@
     </main>
 
     <footer class="footer-section">
+        <div class="container">
       <div class="container-footer">
         <div class="footer-title">
           <a href="./index.html" class="logo-footer"
