--- a/portfolio.html
+++ b/portfolio.html
@@ -79,13 +79,16 @@
 
           <ul class="about-container">
             <li class="about-portfolio">
+              <a class="portfolio-link"href>
               <img src="./images/banking.jpg" alt="banking" width="360" />
               <div class="portfolio-context">
                 <h3 class="about-subtitle">Banking App Interface Concept</h3>
                 <p class="about-text">App</p>
               </div>
+              </a>
             </li>
             <li class="about-portfolio">
+               <a class="portfolio-link"href>
               <img
                 src="./images/cashlesspayment.jpg"
                 alt="cashless"
@@ -95,8 +98,10 @@
                 <h3 class="about-subtitle">Cashless Payment</h3>
                 <p class="about-text">Marketing</p>
               </div>
+              </a>
             </li>
             <li class="about-portfolio">
+               <a class="portfolio-link"href>
               <img
                 src="./images/meditaionapp.jpg"
                 alt="meditaion"
@@ -106,15 +111,19 @@
                 <h3 class="about-subtitle">Meditaion App</h3>
                 <p class="about-text">App</p>
               </div>
+              </a>
             </li>
             <li class="about-portfolio">
+              <a class="portfolio-link"href>
               <img src="./images/taxiservice.jpg" alt="taxi" width="360" />
               <div class="portfolio-context">
                 <h3 class="about-subtitle">Taxi Service</h3>
                 <p class="about-text">Marketing</p>
               </div>
+              </a>
             </li>
             <li class="about-portfolio">
+              <a class="portfolio-link"href>
               <img
                 src="./images/screenillustrations.jpg"
                 alt="screen"
@@ -124,15 +133,19 @@
                 <h3 class="about-subtitle">Screen Illustrations</h3>
                 <p class="about-text">Design</p>
               </div>
+              </a>
             </li>
             <li class="about-portfolio">
+              <a class="portfolio-link"href>
               <img src="./images/onlinecourses.jpg" alt="online" width="360" />
               <div class="portfolio-context">
                 <h3 class="about-subtitle">Online Courses</h3>
                 <p class="about-text">Marketing</p>
               </div>
+              </a>
             </li>
             <li class="about-portfolio">
+              <a class="portfolio-link"href>
               <img
                 src="./images/instagramstoriesconcept.jpg"
                 alt="instagram"
@@ -142,20 +155,25 @@
                 <h3 class="about-subtitle">Instagram Stories Concept</h3>
                 <p class="about-text">Design</p>
               </div>
+              </a>
             </li>
             <li class="about-portfolio">
+              <a class="portfolio-link"href>
               <img src="./images/organicfood.jpg" alt="food" width="360" />
               <div class="portfolio-context">
                 <h3 class="about-subtitle">Organic Food</h3>
                 <p class="about-text">Web Site</p>
               </div>
+              </a>
             </li>
             <li class="about-portfolio">
+                <a class="portfolio-link"href>
               <img src="./images/freshcoffee.jpg" alt="coffee" width="360" />
               <div class="portfolio-context">
                 <h3 class="about-subtitle">Fresh Coffee</h3>
                 <p class="about-text">Web Site</p>
               </div>
+              </a>
             </li>
           </ul>
         </div>
