--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
   <body>
     <header class="page-header">
+      
       <div class="container page-header-container">
         <nav class="header-nav">
           <a href="./index.html" class="logo-first"
@@ -56,6 +57,7 @@
             </li>
           </ul>
         </address>
+      
       </div>
     </header>
 
@@ -151,7 +153,7 @@
               <ul class="socials-list">
                 <li class="socials-item">
                   <a class="socials-link" href
-                    >>
+                    >
                     <svg class="socials-icon">
                       <use href="./images/icons.svg#icon-instagram-2"></use>
                     </svg>
@@ -306,7 +308,7 @@
       </section>
 
       <section class="sections-customers">
-        <div class="container sections-customers">
+        <div class="container ">
           <h2 class="customers-title">Customers</h2>
           <ul class="customers-list">
             <li class="customer">
