--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,8 @@
   </head>
 
   <body>
-    <header class="page-header">
+    <div class="header1">
+    <header class="page-header">      
       <div class="container page-header-container">
         <nav class="header-nav">
           <a href="./index.html" class="logo-first"
@@ -57,8 +58,9 @@
           </ul>
         </address>
       </div>
+      
     </header>
-
+</div>
     <main>
       <section class="portfolio">
         <div class="container">
